# streamlit-awesome-table

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
awesome_table/: __init__.py
awesome_table/column/: __init__.py
awesome_table/frontend/: package-lock.json  package.json
awesome_table/frontend/public/: index.html
awesome_table/frontend/src/: AwesomeTable.tsx  index.tsx
samples/simple_table/: __init__.py  sample.py
samples/with_columns/: __init__.py
samples/with_iconbutton/: __init__.py
samples/with_image/: __init__.py
samples/with_order/: __init__.py
samples/with_search/: __init__.py
samples/with_sidebar/: __init__.py
