[metadata]
name = streamlit_awesome_table
version = attr: streamlit_awesome_table.__version__
description = Awesome Table component for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/caiodearaujo/streamlit-awesome-table
url = https://github.com/caiodearaujo/streamlit-awesome-table
author = caiodearaujo
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    streamlit >= 0.63
    pandas